# test-task-apptrix

./: .env.dist  .gitignore  Procfile  README.md  pyproject.toml
app/: admin.py  filters.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py
apptrix/: settings.py  urls.py
clients/: admin.py  backends.py  managers.py  models.py
clients/migrations/: 0001_initial.py  0002_client_latitude_client_longitude.py
templates/email_templates/: match_email.html
